# SHA1

./: CMakeLists.txt  sha1.cpp  sha1.hpp  sha1_calculator.hpp  tests.cpp
include/sha1/: sha1.hpp  sha1_calculator.hpp
src/: sha1.cpp  sha1.test.cpp
